--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -7,8 +7,8 @@
 
 <!-- DO NOT ADD STRINGS HERE.
 
-    Android content strings now live in
-    content/public/android/java/strings/android_content_strings.grd
+    Android ui strings now live in
+    ui/android/java/strings/android_ui_strings.grd
 
     See http://www.chromium.org/developers/design-documents/ui-localization
 -->
